--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "hanlei <1254227613@qq.com>",
   "homepage": "https://github.com/zhuhanlei/repo#readme",
   "license": "ISC",
-  "main": "lib/module2.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
